--- a/notebook/01_Pandas_100_Knocks_for_Begginer_v1.0.6.ipynb
+++ b/notebook/01_Pandas_100_Knocks_for_Begginer_v1.0.6.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -6451,9 +6451,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>English</th>\n",
+       "      <th>Mathematics</th>\n",
+       "      <th>History</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.000000e+01</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-1.554312e-16</td>\n",
+       "      <td>1.665335e-16</td>\n",
+       "      <td>-4.440892e-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.054093e+00</td>\n",
+       "      <td>1.054093e+00</td>\n",
+       "      <td>1.054093e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-1.421710e+00</td>\n",
+       "      <td>-1.332741e+00</td>\n",
+       "      <td>-1.981957e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-6.518308e-01</td>\n",
+       "      <td>-6.602572e-01</td>\n",
+       "      <td>-5.774206e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.672284e-02</td>\n",
+       "      <td>-2.934477e-01</td>\n",
+       "      <td>2.028775e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.799755e-01</td>\n",
+       "      <td>6.388600e-01</td>\n",
+       "      <td>4.369669e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.657806e+00</td>\n",
+       "      <td>1.601735e+00</td>\n",
+       "      <td>1.451354e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            English   Mathematics       History\n",
+       "count  1.000000e+01  1.000000e+01  1.000000e+01\n",
+       "mean  -1.554312e-16  1.665335e-16 -4.440892e-16\n",
+       "std    1.054093e+00  1.054093e+00  1.054093e+00\n",
+       "min   -1.421710e+00 -1.332741e+00 -1.981957e+00\n",
+       "25%   -6.518308e-01 -6.602572e-01 -5.774206e-01\n",
+       "50%    6.672284e-02 -2.934477e-01  2.028775e-01\n",
+       "75%    5.799755e-01  6.388600e-01  4.369669e-01\n",
+       "max    1.657806e+00  1.601735e+00  1.451354e+00"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 【74】\n",
     "# scikit-learnを用いてdf2のEnglish、Mathematics、History列を標準化する\n",
@@ -6461,15 +6557,111 @@
     "#print(ans[74]) #回答表示\n",
     "df2 = initialize2() #初期化\n",
     "\n",
+    "# [answer74]\n",
     "\n",
-    "\n"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "df2 = df2.drop(['name','class'],axis=1) #不要列の削除\n",
+    "\n",
+    "#標準化を定義\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(df2)\n",
+    "\n",
+    "#変換とデータフレームへの置換\n",
+    "scaler.transform(df2)\n",
+    "df2_std = pd.DataFrame(scaler.transform(df2), columns=df2.columns)\n",
+    "\n",
+    "df2_std.describe() #stdが等しくなっていることを確認\n",
+    "\n",
+    "\n",
+    "# [Tips]\n",
+    "# データフレームを標準化する場合は、schikit-learnの\n",
+    "# StandardScalerを使用\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.000000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-1.554312e-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.054093e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-1.421710e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-6.518308e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.672284e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.799755e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.657806e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  0\n",
+       "count  1.000000e+01\n",
+       "mean  -1.554312e-16\n",
+       "std    1.054093e+00\n",
+       "min   -1.421710e+00\n",
+       "25%   -6.518308e-01\n",
+       "50%    6.672284e-02\n",
+       "75%    5.799755e-01\n",
+       "max    1.657806e+00"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 【75】\n",
     "# scikit-learnを用いてdf2のEnglish列を標準化する\n",
@@ -6477,15 +6669,128 @@
     "#print(ans[75]) #回答表示\n",
     "df2 = initialize2() #初期化\n",
     "\n",
+    "# [answer75]\n",
     "\n",
-    "\n"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "#標準化を定義\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(df2['English'].values.reshape(-1,1))\n",
+    "\n",
+    "#変換とデータフレームへの置換\n",
+    "scaler.transform(df2['English'].values.reshape(-1,1))\n",
+    "df2_std = pd.DataFrame(scaler.transform(df2['English'].values.reshape(-1,1)))\n",
+    "\n",
+    "df2_std.describe() #stdが【74】のEnglishと等しくなっていることを確認\n",
+    "\n",
+    "\n",
+    "# [Tips]\n",
+    "# ・データフレームのひとつの列を標準化する場合は、\n",
+    "# 　values.reshape(-1,1)で配列変換してやる方法もある\n",
+    "# ・reshape(-1,1)でn行1列に変換"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>English</th>\n",
+       "      <th>Mathematics</th>\n",
+       "      <th>History</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.000000e+01</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-1.554312e-16</td>\n",
+       "      <td>1.665335e-16</td>\n",
+       "      <td>-4.440892e-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.054093e+00</td>\n",
+       "      <td>1.054093e+00</td>\n",
+       "      <td>1.054093e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-1.421710e+00</td>\n",
+       "      <td>-1.332741e+00</td>\n",
+       "      <td>-1.981957e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-6.518308e-01</td>\n",
+       "      <td>-6.602572e-01</td>\n",
+       "      <td>-5.774206e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.672284e-02</td>\n",
+       "      <td>-2.934477e-01</td>\n",
+       "      <td>2.028775e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.799755e-01</td>\n",
+       "      <td>6.388600e-01</td>\n",
+       "      <td>4.369669e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.657806e+00</td>\n",
+       "      <td>1.601735e+00</td>\n",
+       "      <td>1.451354e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            English   Mathematics       History\n",
+       "count  1.000000e+01  1.000000e+01  1.000000e+01\n",
+       "mean  -1.554312e-16  1.665335e-16 -4.440892e-16\n",
+       "std    1.054093e+00  1.054093e+00  1.054093e+00\n",
+       "min   -1.421710e+00 -1.332741e+00 -1.981957e+00\n",
+       "25%   -6.518308e-01 -6.602572e-01 -5.774206e-01\n",
+       "50%    6.672284e-02 -2.934477e-01  2.028775e-01\n",
+       "75%    5.799755e-01  6.388600e-01  4.369669e-01\n",
+       "max    1.657806e+00  1.601735e+00  1.451354e+00"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 【76】\n",
     "# scikit-learnを用いてdf2のEnglish、Mathematics、History列を\n",
@@ -6495,6 +6800,18 @@
     "df2 = initialize2() #初期化\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "df2 = df2.drop(['name','class'],axis=1) #不要列の削除\n",
+    "\n",
+    "#標準化を定義\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(df2)\n",
+    "\n",
+    "#変換とデータフレームへの置換\n",
+    "scaler.transform(df2)\n",
+    "df2_std = pd.DataFrame(scaler.transform(df2), columns=df2.columns)\n",
+    "\n",
+    "df2_std.describe() #stdが等しくなっていることを確認\n",
     "\n"
    ]
   },
